2006-12-03  Quentin Mathe <qmathe@club-internet.fr>

    * setup.sh:
    * setdown.sh:
    Updated both scripts to support System/SystemTaskList.plist deployment. 
    This is important, otherwise etoile_system won't launch any processes.
    
2006-11-30  Quentin Mathe <qmathe@club-internet.fr>

    * etoile.make: Added automatic export of common variable values, so they 
    are not repeated over and over in each module.

2006-11-30  Quentin Mathe <qmathe@club-internet.fr>

    * etoile.make: Fixed /bin/sh complaining about a missing argument on line 
    7. This has been corrected by quoting $LIBRARY_NAME and $FRAMEWORK_NAME in
    the elif test which follows. This means an undefined variable results in an
    empty string and not anymore in 'no value at all' (the root of the issue).
    Commented out debug logging.

2006-11-28  Quentin Mathe <qmathe@club-internet.fr>

    * etoile.make: Modified to include better support for library/framework 
    build. Now creates automatically a temporary header directory matching the 
    project name.
    
2006-11-19  Quentin Mathe <qmathe@club-internet.fr>

    * Deprecated/Workspace: Moved Services/Private/Workspace here to deprecate
    it.

2006-11-19  Quentin Mathe <qmathe@club-internet.fr>

    * Deprecated: Added a new directory to store deprecated modules in a 
    temporary manner.

2006-11-19  Quentin Mathe <qmathe@club-internet.fr>

    * pmkfile: Removed this deprecated file.

2006-11-15  Quentin Mathe <qmathe@club-internet.fr>

    * Frameworks/GNUmakefile: Updated to build PaneKit and not PreferencesKit
    anymore. This fixes repository compilation by the way.

2006-10-31  Quentin Mathe <qmathe@club-internet.fr>

    * Frameworks/GNUmakefile: Included EtoileFoundation, EtoileUI and 
    DistributedView in Etoile build process by default.

2006-10-19  Quentin Mathe <qmathe@club-internet.fr>

    * setup.sh:
    * setdown.sh:
    Updated to link libgnustep-gui.so in /usr/lib as a temporary solution since